fix(front): i#3655 align button actions

--- a/javascript/apps/taiga/src/app/modules/project/settings/feature-members/components/feature.members.common.css
+++ b/javascript/apps/taiga/src/app/modules/project/settings/feature-members/components/feature.members.common.css
@@ -34,6 +34,7 @@ Copyright (c) 2023-present Kaleidos INC
 }
 
 .row-action {
+  block-size: var(--spacing-32);
   padding: var(--spacing-8);
 
   &.active::ng-deep .t-content {
