--- a/javascript/apps/taiga/src/app/modules/project/settings/feature-members/components/pending-members-list/pending-members-list.component.css
+++ b/javascript/apps/taiga/src/app/modules/project/settings/feature-members/components/pending-members-list/pending-members-list.component.css
@@ -86,7 +86,7 @@ tg-ui-dtable-row {
 }
 
 .invitation-actions {
-  align-items: baseline;
+  align-items: center;
   justify-content: end;
   padding-block: var(--spacing-8);
 }
